# detect-ai

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  action.yml  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  detect-ai-action.yml  detect-ai.yml
detect_ai/: __init__.py  __main__.py  analyzer.py  cli.py  git_detector.py  scoring.py
detect_ai/reporters/: __init__.py  badge_reporter.py  json_reporter.py  markdown_reporter.py
detect_ai/rules/: __init__.py  base.py
detect_ai/rules/javascript/: __init__.py  formatting.py  naming.py  syntax_preferences.py
detect_ai/rules/python/: __init__.py  comments.py  complexity.py  docstrings.py  error_handling.py  formatting.py  naming.py  redundant_patterns.py  structural_patterns.py  syntax_preferences.py  type_hints.py
examples/: REPORT.md  sample_ai.py  sample_ai_humanized.py  sample_human.py
tests/: test_adversarial.py  test_cli.py  test_rules.py
vscode/: package.json  tsconfig.json
vscode/src/: extension.ts
web/: app.py  index_snapshot.html  result_snapshot.html
web/templates/: index.html  result.html
